legacy/additional_testing/gcc_crash_stats/results/gcc540/save_st/pr63543.c-5.4.0-2.out.txt
pr63543.c: In function ‘f1’:
pr63543.c:10:11: error: dereferencing pointer to incomplete type ‘struct S’
   return s->a  
           ^
pr63543.c: In function ‘f2’:
pr63543.c:18:11: error: dereferencing pointer to incomplete type ‘union U’
   return u->a  
           ^
